-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 9
-
Component/s: hotspot
-
b94
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8183640 | 8u161 | Poonam Bajaj Parhar | P2 | Resolved | Fixed | b01 |
| JDK-8154312 | 8u152 | Poonam Bajaj Parhar | P2 | Closed | Fixed | b01 |
| JDK-8192205 | emb-8u161 | Poonam Bajaj Parhar | P2 | Resolved | Fixed | b01 |
We waste up to a few milliseconds every root scanning GC pause, by calling cur->verify_oop_relocations(). This is unnecessary in product builds since the verification uses asserts, which are only enabled in debug builds.
- backported by
-
JDK-8183640 nmethod::oops_do_marking_epilogue always runs verification code
-
- Resolved
-
-
JDK-8192205 nmethod::oops_do_marking_epilogue always runs verification code
-
- Resolved
-
-
JDK-8154312 nmethod::oops_do_marking_epilogue always runs verification code
-
- Closed
-