8140584: nmethod::oops_do_marking_epilogue always runs verification code

Reviewed-by: tschatzl, kvn